# risc0-solana

./: .gitignore  README.md
.github/workflows/: tests.yml
examples/counter/: README.md  package.json
examples/counter/programs/solana-counter/: Cargo.toml
examples/counter/zkvm/host/: Cargo.toml
examples/counter/zkvm/host/src/: main.rs
solana-examples/: Anchor.toml
solana-examples/hello-world/host/: Cargo.toml
solana-examples/hello-world/host/src/: main.rs
solana-examples/hello-world/methods/guest/: Cargo.toml
solana-examples/programs/solana-examples/: Cargo.toml
solana-examples/programs/solana-examples/src/: lib.rs
solana-verifier/: Anchor.toml  README.md  example.env  package.json
solana-verifier/programs/groth_16_verifier/: Cargo.toml  build.rs
solana-verifier/programs/groth_16_verifier/src/: client.rs  error.rs  lib.rs  v3_receipt.rs  v3_test_receipt.rs
solana-verifier/programs/test_bad_verifier/: Cargo.toml
solana-verifier/programs/test_bad_verifier/src/: lib.rs
solana-verifier/programs/verifier_router/: Cargo.toml  build.rs
solana-verifier/programs/verifier_router/src/: client.rs  lib.rs
solana-verifier/programs/verifier_router/src/estop/: events.rs  mod.rs
solana-verifier/programs/verifier_router/src/router/: error.rs  mod.rs
solana-verifier/programs/verifier_router/src/state/: mod.rs
solana-verifier/scripts/: addVerifier.ts  deploy.ts  estop.ts
solana-verifier/scripts/bad-verifier/errors/: testBadVerifier.ts
solana-verifier/scripts/bad-verifier/instructions/: index.ts  verify.ts
solana-verifier/scripts/bad-verifier/programs/: index.ts  testBadVerifier.ts
solana-verifier/scripts/groth16/errors/: groth16Verifier.ts  index.ts
solana-verifier/scripts/groth16/instructions/: verify.ts
solana-verifier/scripts/groth16/programs/: groth16Verifier.ts
solana-verifier/scripts/loaderV3/instructions/: close.ts  deployWithMaxDataLen.ts  extendProgram.ts  initializeBuffer.ts  setAuthority.ts  setAuthorityChecked.ts  upgrade.ts  write.ts
solana-verifier/scripts/loaderV3/programs/: index.ts  solanaLoaderV3Program.ts
solana-verifier/scripts/utils/: addVerifier.ts  estop.ts  utils.ts
solana-verifier/scripts/verify-router/accounts/: index.ts  verifierEntry.ts  verifierRouter.ts
solana-verifier/scripts/verify-router/errors/: verifierRouter.ts
solana-verifier/scripts/verify-router/instructions/: acceptOwnership.ts  addVerifier.ts  (+8 more)
solana-verifier/tests/: router-verifier.ts
(+8 files in other folders)
